<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A8DAB5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/welcome_to_e_charge"
                android:textColor="@color/white"
                android:textSize="26dp"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/ic_baseline_electric_car_24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/RoleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_select"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/UserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="60dp"
                    android:text="@string/user"
                    android:backgroundTint="@color/white"
                    android:textColor="#7E95A0"
                    android:padding="16dp"
                    android:textSize="12dp"
                    android:elevation="10dp"/>

                <Button
                    android:id="@+id/WorkerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worker"
                    android:backgroundTint="@color/white"
                    android:textColor="#7E95A0"
                    android:padding="16dp"
                    android:textSize="12dp"
                    android:elevation="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>